# farm

./: README.md  index.html
client/thick_client/farm_javafx_client/: .classpath  .project  build.fxbuild
client/thick_client/farm_javafx_client/src/javaFxGUI/: FarmMain.fxml  FarmMain.java  FarmMainController.java  SensorController.java  SensorIndicator.java  ValidRange.java
client/thick_client/farm_javafx_client/src/model/: FarmProtocol.java  Model.java  SensorsData.java  SensorsSetup.java
controller/esp32/farm_esp32_ctrl/: farm_esp32_ctrl.ino
controller/raspberry_pi/farm_rpi_ctrl/: .cproject  .project  build_pi.sh  build_x86-64.sh  farm_rpi_ctrl  readme.txt
controller/raspberry_pi/farm_rpi_ctrl/src/: CMakeLists.txt  farm_rpi_ctrl.cpp  uart.cpp  uart.h
controller/raspberry_pi/farm_uno_ctrl/: farm_uno_ctrl.ino
controller/x86_pc/farm_x86_ctrl/: .cproject  .project  farm_x86_ctrl
controller/x86_pc/farm_x86_ctrl/src/: CMakeLists.txt  DataItem.cpp  DataItem.h  DataManager.cpp  DataManager.h  farm_x86_ctrl_active.cpp  farm_x86_ctrl_passive.cpp  farm_x86_ctrl_simple.cpp
docs/: deploy.service  deploy.sh  farm_components.graphml  howto_autostartservice.txt  script.js  style.css
server/tcp_commutator/farm_commutator/: .cproject  .project  farm_commutator
server/tcp_commutator/farm_commutator/src/: CMakeLists.txt  farm_commutator.cpp
server/web_server/farm_java_server/: .project
server/web_server/farm_java_server/src/http/: Listener.java  Methods.java  MyHttpServer.java
server/web_server/farm_nodejs_server/: .project  PeriodicLoop.js  TimeoutManager.js  controller.js  farm.js  index.html  script.js  setup.txt  style.css
